--- a/src/Components/ImageGallery/ImageGallery.module.css
+++ b/src/Components/ImageGallery/ImageGallery.module.css
@@ -6,6 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1240px;    
+    overflow-anchor: none;
   }
   .imageGalleryItem {
       width: 300px;
